--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "font-awesome": "^4.7.0",
+    "gatsby-image": "^2.4.3",
     "gatsby-plugin-offline": "^3.2.2",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
+    "gatsby-source-filesystem": "^2.3.3",
     "jsonwebtoken": "^8.5.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
