--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "typescript": "^3.8.3"
   },
   "scripts": {
-    "start": "node server.js",
-    "dev-start": "react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
