--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "express": "^4.17.1",
+    "firebase": "^7.16.1",
     "font-awesome": "^4.7.0",
     "gatsby-image": "^2.4.3",
     "gatsby-plugin-offline": "^3.2.2",
