--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start-sw": "http-server ./build",
-    "postbuild": "react-snap"
+    "start-sw": "http-server ./build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -45,8 +44,5 @@
   "devDependencies": {
     "http-server": "^0.12.3",
     "miragejs": "^0.1.37"
-  },
-  "reactSnap": {
-    "inlineCss": true
   }
 }
